@@ -5,6 +5,10 @@ Release 1.1 (in development)
 
 * Added a Texinfo builder.
 
+* Incompatibility: The :rst:dir:`py:module` directive doesn't output
+  its ``platform`` option value anymore.  (It was the only thing that
+  the directive did output, and therefore quite inconsistent.)
+
 * Added i18n support for content, a ``gettext`` builder and
   related utilities.
 
